--- a/differentiation.tex
+++ b/differentiation.tex
@@ -1,4 +1,4 @@
-Finally we are ready to begin our study of calculus proper.  We could have started this awhile ago, but we really needed certain facts about continuity, uniform convergence, etc.~before we could address all the facts we care about related to differentiation.  This thus led us to a relatively broad study of the most general spaces\footnote{Meh, basically anyways} in which these notions makes sense.  For the time being, however, we return to $\R$.
+Finally we are ready to begin our study of differentiation.  We could have started this awhile ago, but we really needed certain facts about continuity, uniform convergence, and even integration, before we could address all the facts we care about related to differentiation.  This thus led us to a relatively broad study of the most general spaces\footnote{Meh, basically anyways} in which these notions makes sense.  For the time being, however, we return to $\R ^d$.
 
 \section{Tensors and abstract index notation}
 
