--- a/math_commands.tex
+++ b/math_commands.tex
@@ -11,6 +11,7 @@
 \DeclareMathOperator{\Ad}{Ad}
 \DeclareMathOperator{\ad}{ad}
 \DeclareMathOperator{\Aut}{Aut}
+\DeclareMathOperator{\Bor}{Bor}
 \DeclareMathOperator{\CO}{CO}
 \newcommand{\Cech}{\check{\mathrm{C}}}
 \newcommand{\Cl}{\mathcal{C}\ell}
