--- a/references.tex
+++ b/references.tex
@@ -12,7 +12,10 @@ Coleman, Mark.  \textit{Continuous functions nowhere differentiable}.  \href{htt
 \bibitem{Gelbaum}
 Gelbaum, Bernard R.; Olmsted, John M.~H..  \textit{Counterexamples in Analysis}.  Dover Publications Inc..  (1992).
 
-\bibitem{Gleason}
+\bibitem{GleasonMeasure}
+Gleason, Jonatahn.  \textit{A homeomorphism of $\R$ that doesn't preserve lebesgue measurability}.  (2009).  \url{https://www.academia.edu/14753183/A_homeomorphism_of_mathbb_R_that_doesnt_preserve_lebesgue_measurability}.
+
+\bibitem{GleasonHaar}
 Gleason, Jonathan.  \textit{Existence and uniqueness of haar measure}.  (2010).  \url{https://www.academia.edu/740208/Existence_and_Uniqueness_of_Haar_Measure}.
 
 \bibitem{Grayson}
@@ -50,6 +53,9 @@ Ross, Kenneth.  \textit{Elementary Analysis:  The Theory of Calculus}.  Springer
 
 \bibitem{Rudin}
 Rudin, Walter.  \textit{Principles of Mathematical Analysis}, 3rd Ed..  McGraw-Hill.  (1976).
+
+\bibitem{BigRudin}
+Rudin, Walter.  \textit{Real and Complex Analysis}, 3rd Ed..  McGraw-Hill.  (1987).
 
 \bibitem{Steen}
 Steen, Lynn Arthur.  Seebach Jr., J.~Arthur.  \textit{Counterexamples in Topology}.  Holt, Rinehart and Winston Inc..  (1970).
