Post tcolorbox overhaul

--- a/apd.tex
+++ b/apd.tex
@@ -76,7 +76,7 @@ Let $X$ and $Y$ be sets.  Show that $X=Y$ iff $X\subseteq Y$ and $Y\subseteq X$.
 \begin{dfn}[Proper subset]\label{ProperSubset}
 Let $X$ be a subset of $Y$.  Then, $X$ is a\emph{proper}\index{Proper subset}, and write $X\subset Y$\index[notation]{$X\subset Y$}, iff there is some $y\in Y$ that is not also in $X$.
 \end{dfn}
-\begin{textequation}
+\begin{displayquote}
 Let $X$ be a set, let $\mathcal{P}$ be a property that an element in $X$ may or may not satisfy, and let us write $\mathcal{P}(x)$ iff $x$ satisfies the property $\mathcal{P}$.  Then, the notation
 \begin{equation*}
 \left\{ x\in X:\mathcal{P}(x)\right\}
@@ -89,7 +89,7 @@ but our personal opinion is that this can look ugly (or even slightly confusing)
 \begin{equation*}
 \left\{ x\in \R |\abs{x}<1\right\} .
 \end{equation*}
-\end{textequation}
+\end{displayquote}
 \begin{dfn}[Complement]
 Let $X$ and $Y$ be sets.  Then, the \emph{complement}\index{Complement} of $Y$ in $X$, $X\setminus Y$\index[notation]{$X\setminus Y$}, is
 \begin{equation}
