--- a/math_commands.tex
+++ b/math_commands.tex
@@ -138,7 +138,7 @@
 
 % 'Sets'
 \newcommand{\A}{\mathbb{A}}
-\renewcommand{\C}{\mathbb{C}}
+\newcommand{\C}{\mathbb{C}}
 \newcommand{\F}{\mathbb{F}}
 \newcommand{\K}{\mathbb{K}}
 \newcommand{\N}{\mathbb{N}}
