--- a/number.tex
+++ b/number.tex
@@ -579,6 +579,7 @@ Furthermore, $\Q$ is unique up to isomorphism of preordered-fields.
 This is also a special case of a more general construction known as the construction of \emph{fraction fields}\index{Fraction field}.  For the same reason as with the Grothendieck group construction, we do not present this in its full generality.
 \end{rmk}
 \begin{proof}
+We leave this as an exercise.
 \begin{exr}
 Try to do the entire proof yourself, using the proof of \cref{Integers} as guidance.
 \end{exr}
@@ -847,7 +848,8 @@ Check that $D\leq E$ implies $D+F\leq E+F$.
 Multiplication is more complicated.  For example, the product $0\cdot 0$ \emph{should} be $0\cdot 0=0$; however, the set product, $00\coloneqq \left\{ de:d\in 0,e\in 0\right\}$, isn't even bounded above.  We have to break-down the definition into cases.  To simplify things, let us temporarily use the notation
 \begin{equation}
 D_0^+\coloneqq \left\{ d\in D:0\leq d\right\} .
-\end{equation}Here, $\cdot$ will denote multiplication in $\R$ and juxtaposition will denote set multiplication.  We define
+\end{equation}
+Here, $\cdot$ will denote multiplication in $\R$ and juxtaposition will denote set multiplication.  We define
 \begin{equation}\label{1.4.31}
 D\cdot E\coloneqq \begin{cases}D_0^+E_0^+\cup 0 & \text{if }0\leq D,E  \\ -\left( (-D)\cdot E\right) & \text{if }D\leq 0,0\leq E \\ -\left( D\cdot (-E)\right) & \text{if }0\leq D,E\leq 0 \\ (-D)\cdot (-E) & \text{if }D,E\leq 0\end{cases}
 \end{equation}
