--- a/uniform.tex
+++ b/uniform.tex
@@ -918,9 +918,9 @@ As a mater of fact, the morphisms don't care whether you're thinking of things a
 \begin{exr}\label{exr4.3.57}
 Let $f:\coord{V,\mathcal{D}}\rightarrow \coord{W,\mathcal{E}}$ be a \emph{linear} map between two seminormed vector spaces.  Show that it is continuous iff it is bounded.
 \end{exr}
-\begin{textequation}
+\begin{displayquote}
 Unless otherwise stated, seminormed vector spaces are always equipped with the uniformity induced by the semimetric space structure (or, equivalently, the uniformity induced by the topological group structure).
-\end{textequation}
+\end{displayquote}
 
 In fact, a lot of examples of seminormed vector spaces have \emph{even more} structure, namely, the structure of an algebra.
 \begin{dfn}[Algebra]\label{Algebra}
@@ -968,9 +968,9 @@ is an isomorphism in the category of seminormed algebras.
 The point is that, if all we care about is the seminormed algebra structure, we may always assume without loss of generality that $\Mor _{\Top}(X,\R )$ is in fact a \emph{normed} algebra with the single norm being given by $\norm[f]_X\coloneqq \sup _{X\in X}\{ \abs{f(x)}\}$.
 \end{rmk}
 \end{exr}
-\begin{textequation}
+\begin{displayquote}
 Unless otherwise stated, $\Mor _{\Top}(X,\R )$ is a always given the structure of a seminormed algebra, the algebra structure defined pointwise and the seminorms being $\norm _K$ for $K\subseteq X$ quasicompact.
-\end{textequation}
+\end{displayquote}
 
 Of \emph{incredible} importance is that this space is in fact complete (at least for so-called \emph{quasicompactly-generated} spaces).  Of course, we need to first actually define what we mean by complete, and so we postpone this result---see \cref{thm4.5.6}.
 \end{exm}
@@ -1566,11 +1566,9 @@ By construction then, $\Cmp (\R (x))$ is a nonzero totally-ordered cauchy-comple
 \end{exm}
 
 In conclusion:
-\begin{footnoteequation}
 \begin{textequation}
 If a space is quasicompactly-generated, then $\Mor _{\Top}(X,\R )$ is complete.  Furthermore, if $\Mor _{\Top}(X,\R )$ is complete, then $X$ is a topological space.\footnote{Uhm, duh.  The content here is not in the implication, but rather in the counter-example.}  Both of these implications are strict:  the reals with the cocountable topology show that the first implication is strict, and the reals with the cocountable extension topology show that the second implication is strict.
 \end{textequation}
-\end{footnoteequation}
 
 \subsection{Complete metric spaces}
 
