--- a/references.tex
+++ b/references.tex
@@ -61,7 +61,7 @@ Rudin, Walter.  \textit{Real and Complex Analysis}, 3rd Ed..  McGraw-Hill.  (198
 Steen, Lynn Arthur.  Seebach Jr., J.~Arthur.  \textit{Counterexamples in Topology}.  Holt, Rinehart and Winston Inc..  (1970).
 
 \bibitem{Stein}
-Stein, Elias M.  Shakarchi, Rami.  \textit{Real Analysis---Meas Theory, Integration, and Hilbert Spaces}.  Princeton University Press.  (2005).
+Stein, Elias M.  Shakarchi, Rami.  \textit{Real Analysis---Measure Theory, Integration, and Hilbert Spaces}.  Princeton University Press.  (2005).
 
 \bibitem{Thomas}
 Thomas, J..  \textit{A regular space, not completely regular}.  The American Mathematical Monthly, Vol.~76, No.~2, pp.~181--182.  (1969).
